<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Activity-->
    <eat-comment />
    <string name="share_prompt">Select how you would like to share</string>

    <!-- Navigation Menu -->
    <eat-comment />
    <string name="menu_heading_general">General</string>
    <string name="menu_heading_account">Account</string>
    <string name="menu_heading_share">Share</string>
    <string name="menu_heading_legal">Legal</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Frequently Asked Questions</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Create Account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share_godtools">Share the GodTools App</string>
    <string name="menu_share_story">Share a Story With Us</string>
    <string name="menu_rate">Rate GodTools</string>
    <string name="menu_terms_of_use">Terms of Use</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_copyright">Copyright</string>

    <!-- Share a story -->
    <eat-comment />
    <string name="share_story_subject">Hear how God is moving!</string>

    <!-- Tools UI -->
    <eat-comment />
    <string name="nav_find_tools">Find Tools</string>
    <string name="nav_my_tools">My Tools</string>
    <string name="nav_favorite_tools">Favorites</string>
    <string name="nav_all_tools">All Tools</string>
    <string name="menu_switch_language">Switch Language</string>
    <string name="title_add_new_tools">Add New Tools</string>
    <string name="action_tools_open">Open Tool</string>
    <string name="action_tools_add_favorite">Add to Favorites</string>
    <string name="action_tools_remove_favorite">Remove from Favorites</string>
    <plurals name="label_tools_shares">
        <item quantity="one">%1$,d View</item>
        <item quantity="other">%1$,d Views</item>
    </plurals>
    <string name="label_tools_about">About</string>
    <plurals name="label_tools_languages">
        <item quantity="one">%1$,d Language</item>
        <item quantity="other">%1$,d Languages</item>
    </plurals>
    <string name="text_tools_all_installed">You have downloaded all available tools.</string>
    <string name="menu_add_to_home">Add to Home screen</string>

    <!-- Language Selection UI -->
    <eat-comment />
    <string name="feature_discovery_title_language_settings">80+ Languages</string>
    <string name="feature_discovery_desc_language_settings" translatable="false">@string/text_language_parallel_description</string>
    <string name="menu_language_settings">Language Settings</string>
    <string name="title_language_settings">Language Settings</string>
    <string name="title_language_primary">Primary Language</string>
    <string name="title_language_parallel">Parallel Language</string>
    <string name="action_language_parallel_select">Select a Parallel Language</string>
    <string name="text_language_parallel_description">Share GodTools with someone in their native language.</string>
    <string name="text_language_warning">Not every tool is available in every language.</string>
    <string name="label_language_none">None</string>
    <string name="label_language_search">Filter Languages</string>

    <!-- Sharing -->
    <eat-comment />
    <string name="share_general_message">Here’s the link to download the app we were looking at today: https://godtoolsapp.com \n\n

Here’s a link to a web version of the app {{share_link}} \n\n

Let’s talk more!</string>
</resources>
