<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:orderInCategory="100"
        android:title="@string/menu_heading_general">
        <menu>
            <item
                android:id="@+id/action_switch_language"
                android:orderInCategory="100"
                android:title="@string/menu_language_settings" />
            <item
                android:id="@+id/action_tutorial"
                android:orderInCategory="150"
                android:title="@string/menu_tutorial" />
            <item
                android:id="@+id/action_about"
                android:orderInCategory="200"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/action_help"
                android:orderInCategory="300"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/action_contact_us"
                android:orderInCategory="400"
                android:title="@string/menu_contact_us" />
        </menu>
    </item>

    <item
        android:orderInCategory="200"
        android:title="@string/menu_heading_account">
        <menu>
            <group android:id="@+id/group_login_items">
                <item
                    android:id="@+id/action_profile"
                    android:orderInCategory="100"
                    android:title="@string/gt_gd_my_activity" />
                <item
                    android:id="@+id/action_login"
                    android:orderInCategory="200"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/action_logout"
                    android:orderInCategory="300"
                    android:title="@string/menu_logout" />
                <item
                    android:id="@+id/action_signup"
                    android:orderInCategory="400"
                    android:title="@string/menu_signup" />
            </group>
        </menu>
    </item>

    <item
        android:orderInCategory="300"
        android:title="@string/menu_heading_share">
        <menu>
            <item
                android:id="@+id/action_share"
                android:orderInCategory="100"
                android:title="@string/menu_share_godtools" />
            <item
                android:id="@+id/action_share_story"
                android:orderInCategory="200"
                android:title="@string/menu_share_story" />
            <item
                android:id="@+id/action_rate"
                android:orderInCategory="300"
                android:title="@string/menu_rate"
                android:visible="false" />
        </menu>
    </item>

    <item
        android:orderInCategory="400"
        android:title="@string/menu_heading_legal">
        <menu>
            <item
                android:id="@+id/action_terms_of_use"
                android:orderInCategory="100"
                android:title="@string/menu_terms_of_use" />
            <item
                android:id="@+id/action_privacy_policy"
                android:orderInCategory="200"
                android:title="@string/menu_privacy_policy" />
            <item
                android:id="@+id/action_copyright"
                android:orderInCategory="300"
                android:title="@string/menu_copyright" />
        </menu>
    </item>
</menu>
