<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:tint="@color/gt_blue"
            app:srcCompat="@drawable/ic_language" />

        <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

        <TextView
            style="@style/Widget.GodTools.Settings.Language.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/title_language_primary" />

        <Button
            android:id="@+id/primary_language"
            style="@style/Widget.GodTools.Settings.Language.Button"
            tools:text="Czech" />

        <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

        <TextView
            style="@style/Widget.GodTools.Settings.Language.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/title_language_parallel" />

        <TextView
            style="@style/Widget.GodTools.Settings.Language.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/text_language_parallel_description" />

        <Button
            android:id="@+id/parallel_language"
            style="@style/Widget.GodTools.Settings.Language.Button"
            android:text="@string/action_language_parallel_select" />

        <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:tint="@color/gt_red"
            app:srcCompat="@drawable/ic_warning" />

        <TextView
            style="@style/Widget.GodTools.Settings.Language.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/text_language_warning"
            android:textColor="@color/gt_red" />

        <View style="@style/Widget.GodTools.Settings.Language.Spacer" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
