<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.LiveData" />
        <import type="org.cru.godtools.base.util.LocaleUtils" />

        <variable name="callbacks" type="org.cru.godtools.ui.languages.LanguageSettingsFragmentBindingCallbacks" />
        <variable name="primaryLocale" type="LiveData&lt;java.util.Locale&gt;" />
        <variable name="parallelLocale" type="LiveData&lt;java.util.Locale&gt;" />
    </data>

    <org.ccci.gto.android.common.widget.HackyNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:tint="@color/gt_blue"
                app:srcCompat="@drawable/ic_language" />

            <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

            <TextView
                style="@style/Widget.GodTools.Settings.Language.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/title_language_primary" />

            <Button
                android:id="@+id/primary_language_button"
                style="@style/Widget.GodTools.Settings.Language.Button"
                android:onClick="@{() -> callbacks.editPrimaryLanguage()}"
                android:text="@{primaryLocale != null ? LocaleUtils.getDisplayName(primaryLocale, context) : null}"
                tools:text="Czech" />

            <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

            <TextView
                style="@style/Widget.GodTools.Settings.Language.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/title_language_parallel" />

            <TextView
                style="@style/Widget.GodTools.Settings.Language.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/text_language_parallel_description" />

            <Button
                android:id="@+id/parallel_language_button"
                style="@style/Widget.GodTools.Settings.Language.Button"
                android:onClick="@{() -> callbacks.editParallelLanguage()}"
                android:text="@{parallelLocale != null ? LocaleUtils.getDisplayName(parallelLocale, context) : @string/action_language_parallel_select}" />

            <View style="@style/Widget.GodTools.Settings.Language.Spacer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:tint="@color/gt_red"
                app:srcCompat="@drawable/ic_warning" />

            <TextView
                style="@style/Widget.GodTools.Settings.Language.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/text_language_warning"
                android:textColor="@color/gt_red" />

            <View style="@style/Widget.GodTools.Settings.Language.Spacer" />
        </LinearLayout>
    </org.ccci.gto.android.common.widget.HackyNestedScrollView>
</layout>
